// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Line chart table suite 1 Indicator, 1 Area snapshot test - should match snapshot 1`] = `
<DocumentFragment>
  .c10 {
  margin: 0;
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.25;
  margin-bottom: 15px;
}

.c10 > p {
  margin: 0;
}

.c10 > p > code {
  padding: 0.2em 0.4em;
  margin: 0;
  font-size: 85%;
  background-color: rgba(27,31,35,0.05);
  border-radius: 3px;
}

.c10 > pre {
  padding: 16px;
  overflow: auto;
  font-size: 85%;
  line-height: 1.45;
  background-color: #f6f8fa;
  border-radius: 3px;
}

.c10 > pre > code {
  display: inline;
  padding: 0;
  margin: 0;
  border: 0;
  overflow: visible;
  line-height: inherit;
  word-wrap: normal;
}

.c7 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 700;
  font-size: 14px;
  line-height: 1;
  display: inline-block;
  padding-top: 5px;
  padding-right: 8px;
  padding-bottom: 4px;
  padding-left: 8px;
  outline: 2px solid transparent;
  outline-offset: -2px;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  background-color: #1d70b8;
  color: #ffffff;
}

.c2 {
  padding: 10px 20px 10px 0;
  border-bottom: 1px solid #bfc1c3;
  text-align: left;
  font-weight: 700;
}

.c2:last-child {
  padding-right: 0;
}

.c18 {
  padding: 10px 20px 10px 0;
  border-bottom: 1px solid #bfc1c3;
  text-align: right;
  font-family: "ntatabularnumbers","nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
}

.c18:last-child {
  padding-right: 0;
}

.c21 {
  padding: 10px 20px 10px 0;
  border-bottom: 1px solid #bfc1c3;
  text-align: left;
}

.c21:last-child {
  padding-right: 0;
}

.c1 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.25;
  color: #0b0c0c;
  width: 100%;
  border-spacing: 0;
  border-collapse: collapse;
  margin-bottom: 20px;
}

.c3 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.1428571428571428;
  font-weight: bold;
  padding: 0.625em 0;
}

.c13 {
  text-align: right;
  padding-right: 10px;
  vertical-align: top;
}

.c14 {
  background-color: #B1B4B6;
  border-top: solid #F3F2F1 2px;
  width: 16%;
}

.c19 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.1428571428571428;
  padding-right: 0;
}

.c23 {
  text-align: right;
  padding-right: 10px;
}

.c24 {
  background-color: #B1B4B6;
  border-top: solid #F3F2F1 2px;
}

.c20 {
  text-align: left;
  width: 10%;
}

.c4 {
  text-align: left;
  vertical-align: top;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c22 {
  padding: 5px 8px 4px 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0.3125em;
  font-weight: 300;
  text-transform: unset;
  background-color: transparent;
  color: #0B0C0C;
  border: 1px solid #0B0C0C;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c8 {
  text-transform: unset;
  margin: 0.3125em;
  color: #303436;
  background-color: #E1E2E3;
}

.c11 {
  margin-bottom: 0;
  margin-left: 0.3125em;
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.25;
}

.c12 {
  width: 10%;
  padding: 1em 0;
  text-align: center;
}

.c16 {
  width: 27%;
}

.c15 {
  width: 22%;
  padding: 0.5em;
  text-align: center;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: left;
  -webkit-justify-content: left;
  -ms-flex-pack: left;
  justify-content: left;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
  padding-left: 8px;
}

.c17 {
  display: block;
}

.c5 {
  border: none;
}

@media print {
  .c10 {
    font-size: 14px;
    line-height: 1.15;
  }
}

@media only screen and (min-width:641px) {
  .c10 {
    font-size: 19px;
    line-height: 1.3157894736842106;
  }
}

@media only screen and (min-width:641px) {
  .c10 {
    margin-bottom: 20px;
  }
}

@media print {
  .c7 {
    font-size: 14px;
    line-height: 1;
  }
}

@media only screen and (min-width:641px) {
  .c7 {
    font-size: 16px;
    line-height: 1;
  }
}

@media print {
  .c18 {
    font-family: sans-serif;
  }
}

@media print {
  .c1 {
    font-size: 14px;
    line-height: 1.15;
  }
}

@media only screen and (min-width:641px) {
  .c1 {
    font-size: 19px;
    line-height: 1.3157894736842106;
  }
}

@media print {
  .c1 {
    color: #000;
  }
}

@media only screen and (min-width:641px) {
  .c1 {
    margin-bottom: 30px;
  }
}

@media print {
  .c3 {
    font-size: 14px;
    line-height: 1.2;
  }
}

@media only screen and (min-width:641px) {
  .c3 {
    font-size: 16px;
    line-height: 1.25;
  }
}

@media print {
  .c19 {
    font-size: 14px;
    line-height: 1.2;
  }
}

@media only screen and (min-width:641px) {
  .c19 {
    font-size: 16px;
    line-height: 1.25;
  }
}

@media print {
  .c11 {
    font-size: 12px;
    line-height: 1.2;
  }
}

@media only screen and (min-width:641px) {
  .c11 {
    font-size: 14px;
    line-height: 1.4285714285714286;
  }
}

<div
    class="c0"
    data-testid="lineChartTable-component"
  >
    <table
      class="c1"
    >
      <thead
        class=""
      >
        <tr
          class=""
        >
          <th
            class="c2 c3 c4 c5"
            colspan="5"
          >
            <div
              class="c6"
            >
              Recent trend: 
              <div
                data-testid="trendTag-container"
              >
                <strong
                  class="c7 c8"
                >
                  <div
                    class="c9"
                    data-testid="trend-tag-component"
                  >
                    <div>
                      <div
                        class="c10 c11"
                      >
                        <p>
                          No trend data available
                        </p>
                      </div>
                    </div>
                  </div>
                </strong>
              </div>
            </div>
          </th>
        </tr>
        <tr
          class=""
        >
          <th
            class="c2"
          />
          <th
            class="c2 c3 c4 c12"
            colspan="5"
          >
            Greater Manchester ICB - 00T
          </th>
          <th
            class="c2 c3 c13 c14"
            data-testid="england-header"
          >
            Benchmark: 
            <br />
             England
          </th>
        </tr>
        <tr
          class=""
        >
          <th
            class="c2"
            colspan="4"
          />
          <th
            class="c2 c3 c4 c15"
            colspan="2"
          >
            95% confidence limits
          </th>
          <th
            class="c2 c3 c13 c14"
          />
        </tr>
        <tr
          class=""
        >
          <th
            class="c2 c3 c4"
            data-testid="header-Period-0"
          >
            Period
          </th>
          <th
            class="c2 c3 c4 c16"
            data-testid="header-Compared to benchmark-1"
          >
            Compared to benchmark
          </th>
          <th
            class="c2 c3 c13"
            data-testid="header-Count-2"
          >
            Count
          </th>
          <th
            class="c2 c3 c13"
            data-testid="header-Value-3"
          >
            Value
            <span
              class="c17"
            >
              (%)
            </span>
          </th>
          <th
            class="c2 c3 c13"
            data-testid="header-Lower-4"
          >
            Lower
          </th>
          <th
            class="c2 c3 c13"
            data-testid="header-Upper-5"
          >
            Upper
          </th>
          <th
            class="c2 c3 c13 c14"
            data-testid="header-Value -6"
          >
            Value  
            <span
              class="c17"
            >
              (%)
            </span>
          </th>
        </tr>
      </thead>
      <tbody
        class=""
      >
        <tr
          class=""
        >
          <td
            class="c18 c19 c20"
          >
            2004
          </td>
          <td
            class="c21 c19 c20"
          >
            <strong
              class="c7 c22"
            >
              Not compared
            </strong>
          </td>
          <td
            class="c18 c19 c23"
          >
            267
          </td>
          <td
            class="c18 c19 c23"
          >
            703.42
          </td>
          <td
            class="c18 c19 c23"
          >
            441.69151
          </td>
          <td
            class="c18 c19 c23"
          >
            578.32766
          </td>
          <td
            class="c21 c19 c23 c24"
            data-testid="grey-table-cell"
          >
            904.87
          </td>
        </tr>
        <tr
          class=""
        >
          <td
            class="c18 c19 c20"
          >
            2008
          </td>
          <td
            class="c21 c19 c20"
          >
            <strong
              class="c7 c22"
            >
              Not compared
            </strong>
          </td>
          <td
            class="c18 c19 c23"
          >
            222
          </td>
          <td
            class="c18 c19 c23"
          >
            890.31
          </td>
          <td
            class="c18 c19 c23"
          >
            441.69151
          </td>
          <td
            class="c18 c19 c23"
          >
            578.32766
          </td>
          <td
            class="c21 c19 c23 c24"
            data-testid="grey-table-cell"
          >
            965.98
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;

exports[`Line chart table suite 1 Indicator, 2 Areas snapshot test - should match snapshot 1`] = `
<DocumentFragment>
  .c10 {
  margin: 0;
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.25;
  margin-bottom: 15px;
}

.c10 > p {
  margin: 0;
}

.c10 > p > code {
  padding: 0.2em 0.4em;
  margin: 0;
  font-size: 85%;
  background-color: rgba(27,31,35,0.05);
  border-radius: 3px;
}

.c10 > pre {
  padding: 16px;
  overflow: auto;
  font-size: 85%;
  line-height: 1.45;
  background-color: #f6f8fa;
  border-radius: 3px;
}

.c10 > pre > code {
  display: inline;
  padding: 0;
  margin: 0;
  border: 0;
  overflow: visible;
  line-height: inherit;
  word-wrap: normal;
}

.c7 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 700;
  font-size: 14px;
  line-height: 1;
  display: inline-block;
  padding-top: 5px;
  padding-right: 8px;
  padding-bottom: 4px;
  padding-left: 8px;
  outline: 2px solid transparent;
  outline-offset: -2px;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  background-color: #1d70b8;
  color: #ffffff;
}

.c2 {
  padding: 10px 20px 10px 0;
  border-bottom: 1px solid #bfc1c3;
  text-align: left;
  font-weight: 700;
}

.c2:last-child {
  padding-right: 0;
}

.c19 {
  padding: 10px 20px 10px 0;
  border-bottom: 1px solid #bfc1c3;
  text-align: right;
  font-family: "ntatabularnumbers","nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
}

.c19:last-child {
  padding-right: 0;
}

.c22 {
  padding: 10px 20px 10px 0;
  border-bottom: 1px solid #bfc1c3;
  text-align: left;
}

.c22:last-child {
  padding-right: 0;
}

.c1 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.25;
  color: #0b0c0c;
  width: 100%;
  border-spacing: 0;
  border-collapse: collapse;
  margin-bottom: 20px;
}

.c3 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.1428571428571428;
  font-weight: bold;
  padding: 0.625em 0;
}

.c13 {
  text-align: right;
  padding-right: 10px;
  vertical-align: top;
}

.c14 {
  background-color: #B1B4B6;
  border-top: solid #F3F2F1 2px;
  width: 16%;
}

.c20 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.1428571428571428;
  padding-right: 0;
}

.c25 {
  text-align: right;
  padding-right: 10px;
}

.c26 {
  background-color: #B1B4B6;
  border-top: solid #F3F2F1 2px;
}

.c21 {
  text-align: left;
  width: 10%;
}

.c4 {
  text-align: left;
  vertical-align: top;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c24 {
  padding: 5px 8px 4px 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0.3125em;
  font-weight: 300;
  text-transform: unset;
  background-color: transparent;
  color: #0B0C0C;
  border: 1px solid #0B0C0C;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c8 {
  text-transform: unset;
  margin: 0.3125em;
  color: #303436;
  background-color: #E1E2E3;
}

.c11 {
  margin-bottom: 0;
  margin-left: 0.3125em;
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.25;
}

.c12 {
  width: 10%;
  padding: 1em 0;
  text-align: center;
}

.c16 {
  width: 27%;
}

.c17 {
  border-left: solid black 1px;
  width: 18%;
  padding-left: 0.5em;
}

.c15 {
  width: 22%;
  padding: 0.5em;
  text-align: center;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: left;
  -webkit-justify-content: left;
  -ms-flex-pack: left;
  justify-content: left;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
  padding-left: 8px;
}

.c23 {
  border-left: solid black 1px;
}

.c18 {
  display: block;
}

.c5 {
  border: none;
}

@media print {
  .c10 {
    font-size: 14px;
    line-height: 1.15;
  }
}

@media only screen and (min-width:641px) {
  .c10 {
    font-size: 19px;
    line-height: 1.3157894736842106;
  }
}

@media only screen and (min-width:641px) {
  .c10 {
    margin-bottom: 20px;
  }
}

@media print {
  .c7 {
    font-size: 14px;
    line-height: 1;
  }
}

@media only screen and (min-width:641px) {
  .c7 {
    font-size: 16px;
    line-height: 1;
  }
}

@media print {
  .c19 {
    font-family: sans-serif;
  }
}

@media print {
  .c1 {
    font-size: 14px;
    line-height: 1.15;
  }
}

@media only screen and (min-width:641px) {
  .c1 {
    font-size: 19px;
    line-height: 1.3157894736842106;
  }
}

@media print {
  .c1 {
    color: #000;
  }
}

@media only screen and (min-width:641px) {
  .c1 {
    margin-bottom: 30px;
  }
}

@media print {
  .c3 {
    font-size: 14px;
    line-height: 1.2;
  }
}

@media only screen and (min-width:641px) {
  .c3 {
    font-size: 16px;
    line-height: 1.25;
  }
}

@media print {
  .c20 {
    font-size: 14px;
    line-height: 1.2;
  }
}

@media only screen and (min-width:641px) {
  .c20 {
    font-size: 16px;
    line-height: 1.25;
  }
}

@media print {
  .c11 {
    font-size: 12px;
    line-height: 1.2;
  }
}

@media only screen and (min-width:641px) {
  .c11 {
    font-size: 14px;
    line-height: 1.4285714285714286;
  }
}

<div
    class="c0"
    data-testid="lineChartTable-component"
  >
    <table
      class="c1"
    >
      <thead
        class=""
      >
        <tr
          class=""
        >
          <th
            class="c2 c3 c4 c5"
          />
          <th
            class="c2 c3 c4 c5"
            colspan="5"
          >
            <div
              class="c6"
            >
              Recent trend: 
              <div
                data-testid="trendTag-container"
              >
                <strong
                  class="c7 c8"
                >
                  <div
                    class="c9"
                    data-testid="trend-tag-component"
                  >
                    <div>
                      <div
                        class="c10 c11"
                      >
                        <p>
                          No trend data available
                        </p>
                      </div>
                    </div>
                  </div>
                </strong>
              </div>
            </div>
          </th>
          <th
            class="c2 c3 c4 c5"
            colspan="5"
          >
            <div
              class="c6"
            >
              Recent trend: 
              <div
                data-testid="trendTag-container"
              >
                <strong
                  class="c7 c8"
                >
                  <div
                    class="c9"
                    data-testid="trend-tag-component"
                  >
                    <div>
                      <div
                        class="c10 c11"
                      >
                        <p>
                          No trend data available
                        </p>
                      </div>
                    </div>
                  </div>
                </strong>
              </div>
            </div>
          </th>
        </tr>
        <tr
          class=""
        >
          <th
            class="c2"
          />
          <th
            class="c2 c3 c4 c12"
            colspan="5"
          >
            Greater Manchester ICB - 00T
          </th>
          <th
            class="c2 c3 c4 c12"
            colspan="5"
          >
            South FooBar
          </th>
          <th
            class="c2 c3 c13 c14"
            data-testid="england-header"
          >
            Benchmark: 
            <br />
             England
          </th>
        </tr>
        <tr
          class=""
        >
          <th
            class="c2"
            colspan="4"
          />
          <th
            class="c2 c3 c4 c15"
            colspan="2"
          >
            95% confidence limits
          </th>
          <th
            class="c2"
            colspan="3"
          />
          <th
            class="c2 c3 c4 c15"
            colspan="2"
          >
            95% confidence limits
          </th>
          <th
            class="c2 c3 c13 c14"
          />
        </tr>
        <tr
          class=""
        >
          <th
            class="c2 c3 c4"
            data-testid="header-Period-0"
          >
            Period
          </th>
          <th
            class="c2 c3 c4 c16 c17"
            data-testid="header-Compared to benchmark-1"
          >
            Compared to benchmark
          </th>
          <th
            class="c2 c3 c13"
            data-testid="header-Count-2"
          >
            Count
          </th>
          <th
            class="c2 c3 c13"
            data-testid="header-Value-3"
          >
            Value
            <span
              class="c18"
            >
              (%)
            </span>
          </th>
          <th
            class="c2 c3 c13"
            data-testid="header-Lower-4"
          >
            Lower
          </th>
          <th
            class="c2 c3 c13"
            data-testid="header-Upper-5"
          >
            Upper
          </th>
          <th
            class="c2 c3 c4 c16 c17"
            data-testid="header-Compared to benchmark-1"
          >
            Compared to benchmark
          </th>
          <th
            class="c2 c3 c13"
            data-testid="header-Count-2"
          >
            Count
          </th>
          <th
            class="c2 c3 c13"
            data-testid="header-Value-3"
          >
            Value
            <span
              class="c18"
            >
              (%)
            </span>
          </th>
          <th
            class="c2 c3 c13"
            data-testid="header-Lower-4"
          >
            Lower
          </th>
          <th
            class="c2 c3 c13"
            data-testid="header-Upper-5"
          >
            Upper
          </th>
          <th
            class="c2 c3 c13 c14"
            data-testid="header-Value -6"
          >
            Value  
            <span
              class="c18"
            >
              (%)
            </span>
          </th>
        </tr>
      </thead>
      <tbody
        class=""
      >
        <tr
          class=""
        >
          <td
            class="c19 c20 c21"
          >
            2004
          </td>
          <td
            class="c22 c20 c21 c23"
          >
            <strong
              class="c7 c24"
            >
              Not compared
            </strong>
          </td>
          <td
            class="c19 c20 c25"
          >
            267
          </td>
          <td
            class="c19 c20 c25"
          >
            703.42
          </td>
          <td
            class="c19 c20 c25"
          >
            441.69151
          </td>
          <td
            class="c19 c20 c25"
          >
            578.32766
          </td>
          <td
            class="c22 c20 c21 c23"
          >
            <strong
              class="c7 c24"
            >
              Not compared
            </strong>
          </td>
          <td
            class="c19 c20 c25"
          >
            222
          </td>
          <td
            class="c19 c20 c25"
          >
            135.15
          </td>
          <td
            class="c19 c20 c25"
          >
            441.69151
          </td>
          <td
            class="c19 c20 c25"
          >
            578.32766
          </td>
          <td
            class="c22 c20 c25 c26"
            data-testid="grey-table-cell"
          >
            904.87
          </td>
        </tr>
        <tr
          class=""
        >
          <td
            class="c19 c20 c21"
          >
            2008
          </td>
          <td
            class="c22 c20 c21 c23"
          >
            <strong
              class="c7 c24"
            >
              Not compared
            </strong>
          </td>
          <td
            class="c19 c20 c25"
          >
            222
          </td>
          <td
            class="c19 c20 c25"
          >
            890.31
          </td>
          <td
            class="c19 c20 c25"
          >
            441.69151
          </td>
          <td
            class="c19 c20 c25"
          >
            578.32766
          </td>
          <td
            class="c22 c20 c21 c23"
          >
            <strong
              class="c7 c24"
            >
              Not compared
            </strong>
          </td>
          <td
            class="c19 c20 c25"
          >
            222
          </td>
          <td
            class="c19 c20 c25"
          >
            135.15
          </td>
          <td
            class="c19 c20 c25"
          >
            441.69151
          </td>
          <td
            class="c19 c20 c25"
          >
            578.32766
          </td>
          <td
            class="c22 c20 c25 c26"
            data-testid="grey-table-cell"
          >
            965.98
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;
